--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 GITHUB_ID=7d383e6ad061e7389598
 GITHUB_SECRET=dab84919d83d1f94e54a3401e7b2d8f929dec828
+GOOGLE_CLIENTE_ID=609482861220-igdjd2blq99qh9cd8pv4atfksaf3lnr8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
 NEXTAUTH_SECRET=261022
 NEXTAUTH_URL=http://localhost:3000
